# dynordg

./: MANIFEST.in  README.md  pyproject.toml  test.py
src/dynordg/: __init__.py  constants.py
src/dynordg/classes/: __init__.py
src/dynordg/classes/core/: __init__.py  aug.csv  events.py  nodes.py  non_aug.csv  path.py  transcript.py  transitions.py
src/dynordg/classes/graph/: __init__.py  ribograph.py
src/dynordg/classes/simulation/: __init__.py  fluxgraph.py  transcript.py  transitionmap.py
src/dynordg/classes/viz/: __init__.py  ribographviz.py
src/dynordg/classes/viz/data/: __init__.py  edges.py  layout.py
src/dynordg/classes/viz/render/: __init__.py  engine.py  view.py
src/dynordg/data/: __init__.py  noderer.py
src/dynordg/functions/: __init__.py  context_score.py
