# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynordg"
version = "0.1.0"
description = "Simulate and render the flux of Ribosomes along transcripts"
readme = "README.md"
authors = [{name = "Kyle A. Meiklejohn", email="kyle.meiklejohn314@gmail.com"}]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

keywords = ["translation", "ribosome decision graph", "RDG", "simulation", "graph"]

dependencies = [
    "biopython >=1.86",
    "levenshtein >= 0.27.3",
    "matplotlib >= 3.10.6",
    "networkx >= 3.5",
    "pandas >= 2.3.3",
]

requires-python = ">=3.12"
