# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynordg"
version = "0.1.0"
description = "Simulate and render the flux of Ribosomes through Ribosomal Phase Space"
readme = "README.md"
authors = [{name = "Kyle A. Meiklejohn", email="kyle.meiklejohn314@gmail.com"}]
license = 'MIT'
license-files = ["LICEN[CS]E*"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]



keywords = ["translation", "ribosome decision graph", "RDG", "simulation", "graph"]

dependencies = [
    "biopython >=1.86",
    "levenshtein >= 0.27.3",
    "matplotlib >= 3.10.6",
    "networkx >= 3.5",
    "pandas >= 2.3.3",
]

requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/k-meiklejohn/dynordg"
Issues = "https://github.com/k-meiklejohn/dynordg/issues"